--- a/code/Garden.css
+++ b/code/Garden.css
@@ -660,9 +660,10 @@ header{
 
 header.glide {
   position: fixed;
-  font-size: 2px;
+  font-size: 0.01px;
   width: 100%;
-  height: 60px;
+  height: 58px;
+  z-index: 10;
 }
 
 
@@ -708,12 +709,223 @@ header img{
     height: auto;
 }
 
+.inner{
+	position: relative;
+}
+
+.picture h1{
+	font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    color: white;
+    src: local('Open Sans Light'), local('OpenSans-Light'), url(https://fonts.gstatic.com/s/opensans/v15/mem5YaGs126MiZpBA-UN_r8OXuhpOqc.woff2) format('woff2');
+    unicode-range: U+1F00-1FFF;
+    position: absolute;
+    width: 100%;
+    top: 40%;
+    left: 10%;
+    margin-top: -400px; 
+    font-size: 50px;
+    line-height: 70px;
+}
+
+
+
+
+.products__reccomend, .products__forsale{
+	margin-left: 100px;
+	margin-top: 70px;
+}
+
+.products__forsale{
+	width: 100%;
+	flex: row;
+	height: 460px;
+}
+
+.products__forsale_r{
+	width: 21%;
+	height: auto;
+	float: left;
+	display: inline-block;
+	margin-right: 10px;
+}
+
+
+
+.products__forsale_r img{
+	height: 90%; 
+	width: 90%;
+	 z-index: -1;
+	 position: relative;
+}
+.products__forsale_r img:after {
+  display: block;
+  content: '';
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 90%;
+  height: 90%;
+  
+  
+}
+.pr1:hover{
+	background: linear-gradient(to bottom, rgba(66, 98, 128, 0) 0%, rgba(66, 98, 128, .4) 75%);
+	cursor: pointer;
+	width: 100%;
+	height: 100%;
+}
+
+
+
+.products__forsale .send{
+	margin: -30% 6%;
+
+}
+
+.products__forsale_r p, strong{
+	width: 100%;
+}
+
+
+.products__forsale_r p{
+	margin-left: 0;
+	text-align: center;
+}
+
+.products__forsale_r strong{
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 24px;
+}
+
+ .products__forsale_r{
+	text-align: center;
+}
+
+.products__forsale_r h3{
+	margin-top: 80px;
+	margin-right: 80px;
+}
+
+
+
+.products hr{
+	margin-top: 44px;
+	margin-bottom: 90px;
+	width: 85%;
+	border: none; 
+    background-color: #e9e9e9; 
+    height: 0.5px; 
+}
+
+
+
+
+.sale{
+	background: url(../images/home.jpg) 25% 25% no-repeat;
+	background-size: cover;
+	width: 100%;
+	height: 710px;
+	text-align: center;
+	color: #4f4f4f;
+	font-size: 18px;
+	line-height: 24px;
+	font-style: normal;
+	position: relative;
+}
+
+
+.sale__t h3{
+	color: #333333;
+}
+
+.sale__t{
+	text-align: center;
+	vertical-align: middle;
+	position: absolute;
+	top: 22%;
+	left: 18.5%;
+	width: 63%;
+	height: 310px;
+	padding-top: 55px;
+	background: white;
+}
+
+.sale .send{
+	margin: auto;
+  position: absolute;
+  top: 45%; left: 0; bottom: 0; right: 0;
+  background: transparent;
+  border-top: transparent;
+	width: 310px;
+	color: black;
+	font-size: 25px;
+}
+
+
+.lifestyle{
+	background: url(../images/lifestyle.jpg) 25% 25% no-repeat;
+	background-size: cover;
+	width: 100%;
+	height: 580px;
+	text-align: center;
+	color: white;
+	font-size: 18px;
+	line-height: 24px;
+	font-style: normal;
+	position: relative;
+}
+
+.lifestyle .send{
+	margin: auto;
+  position: absolute;
+  top: 42%; left: 0; bottom: 0; right: 0;
+  background: transparent;
+  border-top: transparent;
+  color: white;
+}
+
+.lifestyle h3{
+	font-size: 46px;
+	font-weight: 400px;
+	color: white;
+	padding-top: 170px;
+}
+
+
+.lifestyle img{
+	width: 100%;
+}
+
+
+.content .send{
+    float: left;
+	cursor: pointer;
+}
+
+
+
+.content h3 .send:hover{
+	background-color: white;
+	text-align: left;
+}
+
+
+.content .content__section1_text .send{
+	background: #f2f2f2;
+	border-top: #f2f2f2;
+}
+
 .content__section1, .content__section2,  .footer{
     flex: row;
     color: #656565;
     height: 506px;
     font-size: 16px;
 }
+
 
 
 .content__section1_pic, .footer__copyright{
@@ -731,6 +943,72 @@ header img{
 }
 
 
+
+.content__section1_text .m{
+  animation-duration: 1s;
+  animation-name: slidein;}
+@keyframes slidein{
+  from {
+    margin-left: 100%;
+    width: 100%; 
+  }
+  to{margin-left: 100px;
+    width: 80%;
+    text-align: left;}}
+
+
+
+.content__section2_text .q{
+  animation-duration: 1s;
+  animation-name: slideid;}
+@keyframes slideid{
+  from {
+    margin-left: -100%;
+    width: 100%; 
+  }
+  to {margin-left: 100px;
+    width: 80%;
+    text-align: left;}}
+
+
+
+.products {
+  animation-duration: 1s;
+  animation-name: slideit;}
+@keyframes slideit{
+  from {
+    margin-top: 100%;
+    width: 100%; 
+  }
+  to {
+    width: 100%;
+    text-align: left;}}
+
+
+.lifestyle{
+  animation-duration: 1s;
+  animation-name: slideir;}
+@keyframes slideir{
+  from {
+    text-align: center;
+    width: 100%; 
+  }
+  to {
+    width: 100%;
+    text-align: center;}}
+
+
+.sale{
+  animation-duration: 1s;
+  animation-name: slideis;}
+@keyframes slideis{
+  from {
+    text-align: center;
+    width: 100%; 
+  }
+  to {
+    width: 100%;
+    text-align: center;}}
 
 
 
@@ -771,7 +1049,7 @@ header img{
 
 
 .content__section1_text, .content__section2_text{
-  overflow: auto; 
+   overflow: hidden;
 }
 
 
@@ -864,6 +1142,7 @@ header img{
   font-size: 18px;
   line-height: 31px;
   margin-top: -64px;
+  cursor: pointer;
 }
 
 
@@ -896,7 +1175,7 @@ header img{
 
 
 
-@media screen and (max-width: 1240px) and (min-width: 0px){
+@media screen and (max-width: 980px) and (min-width: 0px){
     header img{
         float: left;
     }
@@ -904,6 +1183,15 @@ header img{
     header{
         background-color: white;
         padding-bottom: 32px;
+    }
+
+    .lifestyle .send{
+    	
+
+    }
+
+    .lifestyle{
+    	overflow: hidden;
     }
 
     .service, .form, .text{
@@ -939,14 +1227,14 @@ header img{
       width: 100%;
       display: block;
       margin-top: -512px;
-
+      overflow: hidden;
     }
 
     .content__section1_text, .content__section2_text{
         width: 100%;
         display: block;
         margin-top: -512px;
-        overflow-y: auto;
+        overflow-y: hidden;
    }
 
    .content__section2_text {
