--- a/code/Garden.css
+++ b/code/Garden.css
@@ -701,6 +701,8 @@ header img{
 .picture{
     height: auto;
     margin-bottom: -10px;
+    position: relative;
+    z-index: -1;
 }
 
 
@@ -709,9 +711,6 @@ header img{
     height: auto;
 }
 
-.inner{
-	position: relative;
-}
 
 .picture h1{
 	font-family: 'Open Sans';
@@ -720,11 +719,10 @@ header img{
     color: white;
     src: local('Open Sans Light'), local('OpenSans-Light'), url(https://fonts.gstatic.com/s/opensans/v15/mem5YaGs126MiZpBA-UN_r8OXuhpOqc.woff2) format('woff2');
     unicode-range: U+1F00-1FFF;
-    position: absolute;
+ 	position: absolute;
     width: 100%;
     top: 40%;
-    left: 10%;
-    margin-top: -400px; 
+    left: 10%; 
     font-size: 50px;
     line-height: 70px;
 }
@@ -779,9 +777,20 @@ header img{
 }
 
 
+.products__forsale .news:hover{
+	color: #38688e;
+}
 
-.products__forsale .send{
-	margin: -30% 6%;
+.products__forsale .news{
+	color: black;
+	font-size: 18px;
+	display: block;
+	margin: 10px auto;
+	padding-bottom: 8px;
+	width: 46%;
+    text-align: center;
+  	background: transparent;
+  	border-top: transparent;
 
 }
 
@@ -808,6 +817,7 @@ header img{
 .products__forsale_r h3{
 	margin-top: 80px;
 	margin-right: 80px;
+	overflow: hidden;
 }
 
 
@@ -840,29 +850,31 @@ header img{
 
 .sale__t h3{
 	color: #333333;
+	padding-top: -10%;
 }
 
 .sale__t{
 	text-align: center;
 	vertical-align: middle;
 	position: absolute;
-	top: 22%;
+	top: 25%;
 	left: 18.5%;
 	width: 63%;
 	height: 310px;
 	padding-top: 55px;
 	background: white;
+	overflow: hidden;
 }
 
-.sale .send{
-	margin: auto;
-  position: absolute;
-  top: 45%; left: 0; bottom: 0; right: 0;
-  background: transparent;
-  border-top: transparent;
-	width: 310px;
+.sale .news{
+	width: 37%;
 	color: black;
 	font-size: 25px;
+	display: block;
+	margin: 20px auto;
+    text-align: center;
+  	background: transparent;
+  	border-top: transparent;
 }
 
 
@@ -879,20 +891,22 @@ header img{
 	position: relative;
 }
 
-.lifestyle .send{
-	margin: auto;
-  position: absolute;
-  top: 42%; left: 0; bottom: 0; right: 0;
-  background: transparent;
-  border-top: transparent;
-  color: white;
+.lifestyle .news{
+	display: block;
+	width: 10%;
+	margin: 0 auto;
+    text-align: center;
+  	background: transparent;
+  	border-top: transparent;
+  	color: white;
 }
+
 
 .lifestyle h3{
 	font-size: 46px;
 	font-weight: 400px;
 	color: white;
-	padding-top: 170px;
+	padding-top: 11%;
 }
 
 
@@ -901,23 +915,39 @@ header img{
 }
 
 
-.content .send{
-    float: left;
-	cursor: pointer;
-}
-
-
-
-.content h3 .send:hover{
+.content h3 .news:hover{
 	background-color: white;
 	text-align: left;
 }
 
 
-.content .content__section1_text .send{
+.content__section2_text .news{
+	background: white;
+	border-top: white;
+	border-bottom: 2px solid #b0b0b0;
+	display: block;
+	width: 17%;
+	padding: 1px 1px;
+    text-align: center;
+  	color: black;
+}
+
+.content__section1_text .news{
 	background: #f2f2f2;
 	border-top: #f2f2f2;
+	display: block;
+	width: 17%;
+	padding: 1px 1px;
+    text-align: center;
+  	color: black;
+	border-bottom: 2px solid #b0b0b0;
 }
+
+.content__section1_text .news:hover{
+	background: white;
+}
+
+
 
 .content__section1, .content__section2,  .footer{
     flex: row;
@@ -1053,8 +1083,6 @@ header img{
 }
 
 
-
-
 .content__section1_text{
     display: inline-block;
     float: right;
@@ -1073,7 +1101,7 @@ header img{
 }
 
 
-.content__section1_text h3, p, .content__section2_text h3, p, .footer__copyright p, .footer__address_place p, .footer__address_icons, form h3, p{
+.content__section1_text h3, p, .news, .content__section2_text h3, p, .news, .footer__copyright p, .footer__address_place p, .footer__address_icons, form h3, p{
     width: 70%;
     text-align: left;
     margin-left: 100px;
@@ -1146,6 +1174,23 @@ header img{
 }
 
 
+.news{
+	border-bottom: 2px solid #b0b0b0; 
+  border-right: white;
+  border-left: white;
+  background-color: white;
+  color: black;
+  font-size: 18px;
+   padding: 10px 0;
+  font-weight: 200;
+    font-style: normal;
+    line-height: 36px;
+    font-family: 'Source Sans Pro';
+    letter-spacing: 2px;
+    width: auto;
+}
+
+
 
 
 .footer{
@@ -1185,10 +1230,22 @@ header img{
         padding-bottom: 32px;
     }
 
-    .lifestyle .send{
-    	
-
+    .products__forsale_r{
+    	width: 42%;
+    	margin: 0 auto;
+    	overflow: hidden;
     }
+
+    .products__forsale{
+    	padding-left: -50%;
+    }
+
+    .products__reccomend{
+    	
+    }
+
+
+    
 
     .lifestyle{
     	overflow: hidden;
