--- a/code/Garden.css
+++ b/code/Garden.css
@@ -777,17 +777,27 @@ header img{
 }
 
 
-.products__forsale .news:hover{
+.products__forsale .news:hover {
 	color: #38688e;
+	transition: all 0.3s ease;
 }
+
+a.news:hover span{
+	display: inline-block;
+	margin-left: 7px;
+}
+
+a.news span{
+	display: none;
+}
+
 
 .products__forsale .news{
 	color: black;
 	font-size: 18px;
-	display: block;
 	margin: 10px auto;
-	padding-bottom: 8px;
-	width: 46%;
+	padding-bottom: 2px;
+	display: inline-block;
     text-align: center;
   	background: transparent;
   	border-top: transparent;
@@ -850,28 +860,27 @@ header img{
 
 .sale__t h3{
 	color: #333333;
-	padding-top: -10%;
+	padding-top: 3%;
 }
 
 .sale__t{
 	text-align: center;
 	vertical-align: middle;
 	position: absolute;
-	top: 25%;
+	top: 22%;
 	left: 18.5%;
 	width: 63%;
 	height: 310px;
-	padding-top: 55px;
+	padding: 55px auto 30px auto;
 	background: white;
 	overflow: hidden;
 }
 
 .sale .news{
-	width: 37%;
 	color: black;
 	font-size: 25px;
-	display: block;
-	margin: 20px auto;
+	margin: auto;
+	display: inline-block;
     text-align: center;
   	background: transparent;
   	border-top: transparent;
@@ -892,13 +901,12 @@ header img{
 }
 
 .lifestyle .news{
-	display: block;
-	width: 10%;
 	margin: 0 auto;
     text-align: center;
   	background: transparent;
   	border-top: transparent;
   	color: white;
+  	display: inline-block;
 }
 
 
@@ -906,7 +914,7 @@ header img{
 	font-size: 46px;
 	font-weight: 400px;
 	color: white;
-	padding-top: 11%;
+	padding-top: 16%;
 }
 
 
@@ -924,24 +932,23 @@ header img{
 .content__section2_text .news{
 	background: white;
 	border-top: white;
-	border-bottom: 2px solid #b0b0b0;
-	display: block;
-	width: 17%;
-	padding: 1px 1px;
+	border-bottom: 1.7px solid #b0b0b0;
+	padding: 5px 1px;
     text-align: center;
   	color: black;
+  	transition: all 0.3s ease;
 }
 
 .content__section1_text .news{
 	background: #f2f2f2;
 	border-top: #f2f2f2;
-	display: block;
-	width: 17%;
-	padding: 1px 1px;
+	padding: 5px 1px;
     text-align: center;
   	color: black;
-	border-bottom: 2px solid #b0b0b0;
+	border-bottom: 1.7px solid #b0b0b0;
+	transition: all 0.3s ease;
 }
+
 
 .content__section1_text .news:hover{
 	background: white;
@@ -1080,6 +1087,8 @@ header img{
 
 .content__section1_text, .content__section2_text{
    overflow: hidden;
+   padding: 10% auto;
+
 }
 
 
@@ -1230,6 +1239,7 @@ header img{
         padding-bottom: 32px;
     }
 
+   
     .products__forsale_r{
     	width: 42%;
     	margin: 0 auto;
@@ -1240,12 +1250,6 @@ header img{
     	padding-left: -50%;
     }
 
-    .products__reccomend{
-    	
-    }
-
-
-    
 
     .lifestyle{
     	overflow: hidden;
